--- a/src/app/content/sewy/experimental.mdx
+++ b/src/app/content/sewy/experimental.mdx
@@ -11,7 +11,7 @@ cameraImage: "/loc/sewy/experimental/lgp2.jpg"
 cardImage: "/loc/sewy/experimental/lgp2.jpg"
 stampName:  "/loc/sewy/misc/cheyennestamp.png"
 photoPrompt:
-blurb:
+blurb: Read on to learn how the Civilian Conservation Corps helped shape Wyoming’s landscapes and overcome a variety of challenges!
 stickers: [{image: "/loc/sewy/experimental/ccc.jpg", linkOut: "https://www.loc.gov/item/92513367/", title: "Poster promoting the U.S. Civilian Conservation Corps"}, {image: "/loc/sewy/experimental/tree.png", linkOut: "https://www.loc.gov/resource/cph.3b48810/", title: "Poster promoting conservation of trees as a natural resource."}, {image: "/loc/sewy/experimental/jackson.png", linkOut: "https://www.loc.gov/resource/gdcmassbookdig.storyofaccomplis00unse/?sp=31&q=jackson+lake+civilian+conservation+corps&r=-0.197,0.551,1.415,0.983,0", title: "CCC wrokers on Jackson Lake"}]
 ---
 Cheyenne, a budding new town in the 1870s, was a “treeless prairie town surrounded by large ranches”. Very few trees grow natively to the high prairie -- one of them being the heart-leafed cottonwood. However, encouraging growth of trees benefits the entire ecosystem. The coverage protects animals from cutting winds, and with roots in the ground, water would soak into the ground instead of flooding over and destroying the landscape.
@@ -39,9 +39,7 @@ The CCC worked to address a range of issues, including (but definitely not limit
     {type:"text", src:"And even mosquito control", position:{col:2, row:25}, size:{width:4, height:1}, style:{outline:"box",padding:"3px", fontSize:".9rem",backgroundColor: "white"}},
     {type:"image", src:"/loc/sewy/experimental/ccc4.png", alt:"A comic panel of a man with sunglasses holding a yellow sign prohibiting mosquitos.", position:{col:3, row:26   }, size:{width:7, height:8}}, 
     ]}/> 
-
-And one of their miscellaneous projects was building the new “Central Great Plains Field Station” just outside of Cheyenne.
-
+    
 The CCC was also involved in many other projects across Wyoming: 
 - Removing hazardous submerged trees from Jackson Lake. The trees were submerged when Jackson Lake expanded due to damming. 
 - Fighting fires in Campbell County caused by lightning, which had been burning for years.
