--- a/src/app/content/sewy/knight.mdx
+++ b/src/app/content/sewy/knight.mdx
@@ -68,7 +68,7 @@ Eventually, the camp grew from tents to cabins, which Knight designed and built 
   image="/loc/sewy/knight/classroom.png"
   linkOut="https://www.loc.gov/resource/hhh.wy0048.photos/?sp=13"/>
 
-Knight was an ardent educator - thorughout his lifetime, it is estimated that he taught over 13,000 students. While working, he was often disappointed with the number of fossils excavated Wyoming and sent out of the state -- so he acquired a whole Brontosaurus and assembled it for the museum. After his retirement, he kept working, and taught himself metalwork. He constructed the lifesize T-Rex that sits outside the Geological Museum out of copper plates. The building is also named after him.
+Knight was an ardent educator - thorughout his lifetime, it is estimated that he taught over 13,000 students. While working, he was often disappointed with the number of fossils excavated in Wyoming and sent out of the state -- so he acquired a whole Brontosaurus and assembled it for the museum. After his retirement, he kept working, and taught himself metalwork. He constructed the lifesize T-Rex that sits outside the Geological Museum out of copper plates. The building is also named after him.
 
 
 <LOCItem image="/loc/sewy/knight/knightbuilding.jpg" type="pnp" linkOut="https://www.loc.gov/resource/highsm.32798/?r=-0.032,-0.081,1.111,0.779,0" caption="Tyrannosaurus sculpture outside University of Wyoming’s Geological Museum" alt="A color photograph of  the large, sprawling brick S.H. Knight Geology Building at the Geological Museum. There is a giant sculpture of a T-Rex outside the building."/>
