--- a/src/app/content/sewy/lionsPark.mdx
+++ b/src/app/content/sewy/lionsPark.mdx
@@ -11,7 +11,7 @@ cameraImage: "/loc/sewy/lionsPark/cityPark.jpg"
 cardImage: "/loc/sewy/lionsPark/cityPark.jpg"
 stampName:  "/loc/sewy/misc/cheyennestamp.png"
 photoPrompt:
-blurb: 
+blurb: Having access to electricity could change so much for a city. Read on to learn how Laramie got its own power plant and how it transformed daily life for the townspeople. 
 stickers: [{image: "/loc/sewy/lionsPark/trees.jpg", linkOut: "https://www.loc.gov/resource/cph.3b48715/", title: "Poster encouraging planting trees as a method of soil conservation."}, {image: "/loc/sewy/lionsPark/looking.png", linkOut: "https://www.loc.gov/resource/gdcmassbookdig.arbordaybirddayo00penn/?sp=3&r=-0.1,0.295,1.097,0.755,0", title: "Cover from Pennsylvania book on Arbor Day"}, {image: "/loc/sewy/lionsPark/cottonwood.jpg", linkOut: "https://www.loc.gov/resource/stereo.1s00702/", title: "Stereograph of cottonwood tree"}, {image: "/loc/sewy/lionsPark/jenkins5.png"}]
 ---
 
