--- a/src/app/content/sewy/experimental.mdx
+++ b/src/app/content/sewy/experimental.mdx
@@ -1,7 +1,7 @@
 ---
 title: High Plains Arboretum
 locationTitle: High Plains Arboretum
-address:
+address: 8301 Hildreth Rd
 location: ["SEWY"] 
 latlon: [41.182366594140774, -104.89858294430296]
 neighborhood: Cheyenne
@@ -39,7 +39,7 @@ The CCC worked to address a range of issues, including (but definitely not limit
     {type:"text", src:"And even mosquito control", position:{col:2, row:25}, size:{width:4, height:1}, style:{outline:"box",padding:"3px", fontSize:".9rem",backgroundColor: "white"}},
     {type:"image", src:"/loc/sewy/experimental/ccc4.png", alt:"A comic panel of a man with sunglasses holding a yellow sign prohibiting mosquitos.", position:{col:3, row:26   }, size:{width:7, height:8}}, 
     ]}/> 
-    
+
 The CCC was also involved in many other projects across Wyoming: 
 - Removing hazardous submerged trees from Jackson Lake. The trees were submerged when Jackson Lake expanded due to damming. 
 - Fighting fires in Campbell County caused by lightning, which had been burning for years.
