--- a/src/app/content/sewy/knight.mdx
+++ b/src/app/content/sewy/knight.mdx
@@ -1,7 +1,7 @@
 ---
 title: S.H. Knight Science Camp
 locationTitle: S. H. Knight Geology Building
-address:
+address: 1000 E. University Ave
 location: ["SEWY"]
 latlon: [41.314328970079494, -105.5833908476826]
 neighborhood: Cheyenne
