--- a/src/app/content/sewy/morris.mdx
+++ b/src/app/content/sewy/morris.mdx
@@ -1,7 +1,7 @@
 ---
-title: Esther Hobart Morris
+title: The first woman to hold a public office in the US
 locationTitle: State Capitol Building
-address:
+address: 200 W 24th St
 location: ["SEWY"] 
 latlon: [41.14022007766677, -104.82017796759929]
 neighborhood: Cheyenne
