change title of canal

--- a/src/app/content/chicago/canal.mdx
+++ b/src/app/content/chicago/canal.mdx
@@ -1,5 +1,5 @@
 ---
-title: One of the US's greatest engineering projects of all time
+title: One of the United State's greatest engineering projects of all time
 locationTitle: Canal Origins Park
 address: 2701 S Ashland Ave
 location: ["Chicago"] 
