new titles. added one blurb

--- a/src/app/content/chicago/ashland.mdx
+++ b/src/app/content/chicago/ashland.mdx
@@ -1,5 +1,5 @@
 ---
-title: The "L" is Born
+title: Building the "L"
 locationTitle: Ashland Station
 address: 1601 W Lake St
 location: ["Chicago"] 
