--- a/src/app/content/chicago/graceland.mdx
+++ b/src/app/content/chicago/graceland.mdx
@@ -1,5 +1,5 @@
 ---
-title: After Death Architecture Tour
+title: Chicago's architecture tour in the cemetery
 locationTitle: Graceland Cemetery
 address: 4001 N Clark St
 location: ["Chicago"] 
