--- a/src/app/content/chicago/onLeong.mdx
+++ b/src/app/content/chicago/onLeong.mdx
@@ -11,7 +11,7 @@ cameraImage: "/loc/chicago/onLeong/header.png"
 cardImage: "/loc/chicago/onLeong/header.png"
 stampName: "/illustrations/chicagoRed.png"
 photoPrompt: "See what elements you can spot. There are dragons, butterflies, clouds, and lotus flowers. Can you find the medallions above the second floor windows?"
-blurb:
+blurb:  Read up on the history of Chicago's second Chinatown, and how a group of merchants created a community center that helped new and existing community members start and improve their lives.
 stickers: [{image: "/loc/chicago/onLeong/eastElevation.png", linkOut: "https://www.loc.gov/resource/hhh.il0981.sheet/?sp=5"},{image: "/loc/chicago/onLeong/craneAndFrog.png", linkOut: "https://www.loc.gov/resource/hhh.il0981.sheet/?sp=12&st=image"}, {image: "/loc/chicago/onLeong/interiorLamp.png", linkOut: "https://www.loc.gov/resource/hhh.il0981.sheet/?sp=13&st=image"}, {image: "/illustrations/chicagoRed.png"}]
 ---
 
