another title change

--- a/src/app/content/sewy/experimental.mdx
+++ b/src/app/content/sewy/experimental.mdx
@@ -1,5 +1,5 @@
 ---
-title: High Plains Arboretum
+title: Wyoming's Experimental Arboretum
 locationTitle: High Plains Arboretum
 address: 8301 Hildreth Rd
 location: ["SEWY"] 
