add spech bubble tails for esther

--- a/src/app/content/seattle/names/aliceBall.mdx
+++ b/src/app/content/seattle/names/aliceBall.mdx
@@ -37,7 +37,7 @@ This photo was taken by John Presley Ball, and was produced via daguerreotype, w
 
 Alice Ball was born in 1892 in Seattle, WA into a family of photographers - John Presley Ball was her grandfather - and, perhaps inspired by the photography process, she studied chemistry at the University of Washington.
 
-She then got her master’s in chemistry at the University of Hawai’i (UH), where her thesis explored the chemical makeup of the Ava Root, which could be used to treat many illnesses, from anxiety to kidney disorders. She was both the first woman and the first African American to get a master’s from UH.
+She then got her master’s in chemistry at the University of Hawai’i (UH), where her thesis explored the chemical makeup of the Kava Root, which could be used to treat many illnesses, from anxiety to kidney disorders. She was both the first woman and the first African American to get a master’s from UH.
 
 <ComicSection cols={5} rowHeight="2rem" elements={[
     {type:"text", src:"When I saw Alice Ball’s work, I thought she’d be the perfect person to work on researching chaulmoogra oil, which also was extracted from a plant.",style:{outline: "bubble"}, position:{col:1, row:1}, size:{width:5, height:3}},
@@ -59,7 +59,7 @@ She then got her master’s in chemistry at the University of Hawai’i (UH), wh
     {type:"text", style:{outline: "bubble"},position:{col:4, row:34}, size:{width:2, height:2},src:"well, it wouldn't stay down"},
     {type:"image", src:"/loc/seattle/aliceBall/hollmann4.png", alt:"Hollmann's arms are up, mid-shrug", position:{col:4, row:36}, size:{width:2, height:5}},
 ]}/> 
-So even though there had been a medicine to treat leprosy for centuries, there was no way to give it to patients. Dr. Hollmann, who worked at the Leprosy Investigation Station in Kalawao, Hawai'i, recruited Ball to tackle the problem. At age 23, Ball developed a chemical method so that the water insoluble acid in the chaulmoogra oil could be suspended in water and injected comfortably.
+So even though there had been a medicine to treat leprosy for centuries, there was no way to give it to patients. Dr. Hollmann, who worked at the Leprosy Investigation Station in Kalawao, Hawai'i, recruited Ball to tackle the problem. At age 23, Ball developed a chemical method so that the water insoluble acid in the chaulmoogra oil could be dissolved in water and injected comfortably.
 
 When she died less than a year later at the age of 24, the dean of medicine (coincidentally named Arthur Dean) at the university took over her research and eventually published it as the “Dean method”.
 
