--- a/src/app/content/sewy/morris.mdx
+++ b/src/app/content/sewy/morris.mdx
@@ -28,48 +28,48 @@ From day one, being the first female judge was not easy. Her predecessor, J. W. 
 
 <ComicSection cols={9} rowHeight="2rem" elements={[
     {type:"image", src: "/loc/sewy/morris/enteringCourtroom.png", alt:"A colorful comic panel of a woman and two men, Esther Morris and her two sons, bursting into a room. A man with a mustache, J.W. Stillman, looks at the doorway in surprise.",position:{col:1, row:1}, size:{width:9, height:7}},
-    {type:"text", src:"This is my courtroom now.", position:{col:5, row:7}, size:{width:5, height:3}, style:{outline:"bubble", fontSize:"1.4rem", padding:"6px"}},
+    {type:"text", src:"This is my courtroom now.", position:{col:5, row:7}, size:{width:5, height:3}, style:{outline:"bubble", fontSize:"1.4rem", padding:"6px"}, bubbleStyle: {tailDegree: 250}},
     {type:"image", src: "/loc/sewy/morris/showdown.png", alt:"A comic panel of J.W. Stillman looking suspiciously at one of the men.", position:{col:2, row:10}, size:{width:7, height:16}},
-    {type:"text", src:"What? Are you the new justice of the peace?", position:{col:4, row:10}, size:{width:5, height:3}, style:{outline:"bubble", fontSize:".9rem", padding:"6px"}},
+    {type:"text", src:"What? Are you the new justice of the peace?", position:{col:4, row:10}, size:{width:5, height:3}, style:{outline:"bubble", fontSize:".9rem", padding:"6px"}, bubbleStyle: {tailDegree: 170}},
     {type:"text", src:"nono, not me", position:{col:3, row:16}, size:{width:3, height:3}, style:{outline:"none", fontSize:".9rem", padding:"6px"}},
     {type:"text", src:"we're just the sons", position:{col:6, row:22}, size:{width:3, height:3}, style:{outline:"none", fontSize:".9rem", padding:"6px"}},
 ]}/>
 
 <ComicSection cols={9} rowHeight="2rem" elements={[
-    {type:"text", src:"I'm the new justice of the peace.", position:{col:1, row:1}, size:{width:6, height:2}, style:{outline:"bubble", fontSize:"1rem", padding:"6px"}},
+    {type:"text", src:"I'm the new justice of the peace.", position:{col:1, row:1}, size:{width:6, height:2}, style:{outline:"bubble", fontSize:"1rem", padding:"6px"}, bubbleStyle: {tailDegree: 30}},
     {type:"image", src: "/loc/sewy/morris/faceToFace.png", alt:"A comic panel of J.W. Stillman looking skeptically at Esther Morris", position:{col:1, row:1}, size:{width:9, height:7}},
-    {type:"text", src:"I need the dockets.", position:{col:3, row:7}, size:{width:5, height:2}, style:{outline:"bubble", fontSize:"1rem", padding:"6px"}},
-    {type:"text", src:"I won't do it!", position:{col:5, row:10}, size:{width:2, height:2}, style:{outline:"bubble", fontSize:"1.2rem"}},
+    {type:"text", src:"I need the dockets.", position:{col:3, row:7}, size:{width:5, height:2}, style:{outline:"bubble", fontSize:"1rem", padding:"6px"}, bubbleStyle: {tailDegree: 290}},
+    {type:"text", src:"I won't do it!", position:{col:5, row:10}, size:{width:2, height:2}, style:{outline:"bubble", fontSize:"1.2rem"}, bubbleStyle: {tailDegree: 160}},
     {type:"image", src: "/loc/sewy/morris/writeWarrant.png", position:{col:1, row:10}, size:{width:9, height:13}},
-    {type:"text", src:"Yeah that's going to be a warrant then.", alt:"A comic panel of Esther scribbling into notepad.", position:{col:5, row:21}, size:{width:4, height:2}, style:{outline:"bubble", fontSize:"1rem"}},
+    {type:"text", src:"Yeah that's going to be a warrant then.", alt:"A comic panel of Esther scribbling into notepad.", position:{col:5, row:20}, size:{width:4, height:2}, style:{outline:"bubble", fontSize:"1rem"}, bubbleStyle: {tailDegree: 280}},
 ]}/>
 
 In his first court appearance, Stillman’s attorney argued that the warrant was improperly issued.
 
 <ComicSection cols={9} rowHeight="2rem" elements={[
-    {type:"text", src:"This warrant will never hold up in court!", position:{col:1, row:1}, size:{width:5, height:2}, style:{outline:"bubble", fontSize:".8rem", padding:"6px"}},
-    {type:"text", src:"hmmm. You might be right.", position:{col:3, row:4}, size:{width:4, height:2}, style:{outline:"bubble", fontSize:".8rem", padding:"6px"}},
+    {type:"text", src:"This warrant will never hold up in court!", position:{col:1, row:1}, size:{width:5, height:2}, style:{outline:"bubble", fontSize:".8rem", padding:"6px"}, bubbleStyle: {tailDegree: 200}},
+    {type:"text", src:"hmmm. You might be right.", position:{col:3, row:4}, size:{width:4, height:2}, style:{outline:"bubble", fontSize:".8rem", padding:"6px"}, bubbleStyle: {tailDegree: 10}},
     {type:"image", src: "/loc/sewy/morris/morrisLooking.png", alt:"A comic panel of Esther looking pensive.", position:{col:2, row:1}, size:{width:8, height:7}},
-    {type:"text", src:"Case dismissed.", position:{col:4, row:6}, size:{width:4, height:2}, style:{outline:"bubble", fontSize:"1rem", padding:"6px"}},
+    {type:"text", src:"Case dismissed.", position:{col:4, row:6}, size:{width:4, height:2}, style:{outline:"bubble", fontSize:"1rem", padding:"6px"}, bubbleStyle: {tailDegree: 320}},
 ]}/>
 
 <ComicSection cols={9} rowHeight="1rem" elements={[
     {type:"image", src: "/loc/sewy/morris/celebrating.png", alt:"A comic of two figures joyfully running out of a building in the background, and Esther scribbling into a notepad in the foreground.",position:{col:1, row:1}, size:{width:9, height:17}},
     {type:"text", src:"wahooooo", position:{col:2, row:8}, size:{width:1, height:2}, style:{fontSize:".7rem",transform:"rotate(-4deg)", padding:"6px", backgroundColor:"#ffffff8a", outline:"none"}},
     {type:"text", src:"we did it!!!", position:{col:4, row:10}, size:{width:2, height:2}, style:{fontSize:".7rem",transform:"rotate(8deg)", padding:"6px", backgroundColor:"#ffffff8a", outline:"none"}},
-    {type:"text", src:"I'll just write a new one.", position:{col:5, row:18}, size:{width:4, height:4}, style:{outline:"bubble", fontSize:"1rem", padding:"6px"}},
+    {type:"text", src:"I'll just write a new one.", position:{col:5, row:18}, size:{width:4, height:4}, style:{outline:"bubble", fontSize:"1rem", padding:"6px"}, bubbleStyle: {tailDegree: 280}},
     ]}/>
 
 
 In his second court appearance, Stillman argued that it wouldn’t be a fair trial since Morris would be the one presiding over the case. 
 
 <ComicSection cols={9} rowHeight="2 rem" elements={[
-    {type:"text", src:"This is a stacked court! How could I ever receive a fair trial?", position:{col:1, row:1}, size:{width:4, height:2}, style:{outline:"bubble", fontSize:".8rem", padding:"6px"}},
-    {type:"image", src: "/loc/sewy/morris/withSons.png", alt:"A comic panel of Esther looking determined and flanked by one of her sons on each side.", position:{col:1, row:1}, size:{width:9, height:7}},
-    {type:"text", src:"With you as a judge and your two sons as your cronies.", position:{col:5, row:1}, size:{width:4, height:2}, style:{outline:"bubble", fontSize:".8rem", padding:"6px"}},
-    {type:"text", src:"And I'll NEVER let a woman preside over this court! You'll never get my dockets.", position:{col:1, row:7}, size:{width:5, height:2}, style:{outline:"bubble", fontSize:".8rem", padding:"6px"}},
+    {type:"text", src:"This is a stacked court! How could I ever receive a fair trial?", position:{col:1, row:1}, size:{width:4, height:2}, style:{outline:"bubble", fontSize:".8rem", padding:"6px"}, bubbleStyle: {tailDegree: 150}},
+    {type:"image", src: "/loc/sewy/morris/withSons.png", alt:"A comic panel of Esther looking determined and flanked by one of her sons on each side.", position:{col:1, row:2}, size:{width:9, height:7}},
+    {type:"text", src:"With you as a judge and your two sons as your cronies.", position:{col:6, row:1}, size:{width:4, height:2}, style:{outline:"bubble", fontSize:".8rem", padding:"6px"}, bubbleStyle: {tailDegree: 40}},
+    {type:"text", src:"And I'll NEVER let a woman preside over this court! You'll never get my dockets.", position:{col:1, row:8}, size:{width:5, height:2}, style:{outline:"bubble", fontSize:".8rem", padding:"6px"}, bubbleStyle: {tailDegree: 130}},
     {type:"image", src: "/loc/sewy/morris/buyNew.png", alt:"A comic panel of Esther holding a dollar bill.", position:{col:4, row:9}, size:{width:6, height:7}},
-    {type:"text", src:"Alright. Archy, go buy me a new docket.", position:{col:3, row:15}, size:{width:5, height:2}, style:{outline:"bubble", fontSize:".8rem", padding:"6px"}},
+    {type:"text", src:"Alright. Archy, go buy me a new docket.", position:{col:3, row:15}, size:{width:5, height:2}, style:{outline:"bubble", fontSize:".8rem", padding:"6px"}, bubbleStyle: {tailDegree: 290}},
 ]}/>
 
 
