--- a/src/app/content/seattle/built/sinking-ship.mdx
+++ b/src/app/content/seattle/built/sinking-ship.mdx
@@ -63,7 +63,7 @@ If you see a building in Pioneer Square that survived the 1949 earthquake, you c
 
 <LOCItem
     type="manuscript"
-    linkOut="https://www.loc.gov/resource/mss11049.mss11049-001_00683_00886/?sp=159"
+    linkOut="https://www.loc.gov/resource/mss11049.mss11049-001_00683_00886/?sp=159&st=text&r=-0.056,-0.144,1.111,1.111,0"
     alt="A photograph of an opened journal with cursive writing filling both pages."
     image="/loc/susan-journal.png"
     caption="Page from Susan B. Anthony's journal"/>
