--- a/src/app/content/seattle/architects/firestationNo18.mdx
+++ b/src/app/content/seattle/architects/firestationNo18.mdx
@@ -28,7 +28,7 @@ But the new town was missing one critical piece -- access to fresh water. Sittin
     alt="Zoomed-in view of newspaper article with the title, “Ballard Annexation is Being Discussed.”  Article discusses the annexation of the town of Ballard to Seattle."
     caption="Citizens of Ballard were not happy with the decision. On the day they merged, the flag was flown at half-staff."/>
 
-In 1910, Seattle replaced the wooden fire station with the red brick building that still stands today. The architects for the new structure were Bebb & Mendel, who also designed the University Heights Elementary School and the Oriental Building in Downtown Seattle. Bebb later went on to design the Seattle Asian Art Museum (known at the time as the Art Institute of Seattle).
+In 1910, Seattle replaced the wooden fire station with the red brick building that still stands today. The architects for the new structure were Bebb & Mendel, who also designed the University Heights Elementary School and the Oriental Building in downtown Seattle. Bebb later went on to design the Seattle Asian Art Museum (known at the time as the Art Institute of Seattle).
 
 At the time, fire engines were powered by horses, so the back area of the station was a stable.
 
@@ -54,7 +54,7 @@ At times, extra support was needed to handle some fires. In 1958, the Seattle Ce
     {type:"image", src:"/loc/seattle/firestationNo18/concernHorse.png", position:{col:4, row:4}, size:{width:2, height:2}},
     {type:"text", style:{outline:"bubble"}, src:"It probably would take at least 3 days to put out...", position:{col:1, row:5}, size:{width:2, height:1}},
     {type:"text", style:{outline:"bubble"}, src:"And require a fireboat....", position:{col:3, row:6}, size:{width:1, height:1}},
-    {type: 'text', style:{outline: "box"}, src:"Unfortunately, the mill did catch on fire. The dried wood was ready fuel, and it was the largest fire Seattle had seen since the Great Fire of 1889.", position: {col: 1, row:7}, size: {width:5, height:1}}
+    {type: 'text', style:{outline: "box"}, src:"Unfortunately, the mill did catch fire. The dried wood was ready fuel, and it was the largest fire Seattle had seen since the Great Fire of 1889.", position: {col: 1, row:7}, size: {width:5, height:1}}
 ]}/>
 
 The fire was so large that it burned for three days straight. The city had engines reporting from seven different stations around the city to come and help, and because the mill was so close to the canal, the city's fireboat was also engaged.
