--- a/src/app/content/seattle/built/sinking-ship.mdx
+++ b/src/app/content/seattle/built/sinking-ship.mdx
@@ -22,7 +22,7 @@ stickers: [{image: "/loc/seattle/seattle-hotel.png", title: "Hotel Seattle", lin
     image="/loc/triangle.jpg"
     caption="Map of Seattle in 1891"/>
 
-Here, where Yesler, 1st, and James meet, a triangle piece of land hosts a unique parking garage called the “Sinking Ship”.
+Here, where Yesler, 1st, and James meet, a triangular piece of land hosts a unique parking garage called the “Sinking Ship”.
 
 Before this parking garage was built here, it was the site of three Seattle hotels: the Occidental I, the Occidental II, and the Hotel Seattle.
 
