--- a/src/app/content/sewy/depot.mdx
+++ b/src/app/content/sewy/depot.mdx
@@ -46,7 +46,7 @@ The decision was made eventually to build on a new location -- the location of t
 
 The new hotel, named the Thornburgh Hotel, and depot were completed in 1924, and operated as a passenger depot for almost 60 years.
 
-The Laramie Railroad Depot Association now stewards the care of the historic Thornburgh Hotel and railroad depot. Four pieces of railroad equipment now sit in the Railroad Heritage Park now -- a caboose, bunk car, steam engine, and snowplow -- which is a combination of rolling stock that could have operated realistically at some point. The snowplow, as well as the depot itself, are listed on the National Register of Historic Places.
+The Laramie Railroad Depot Association now stewards the care of the historic Thornburgh Hotel and railroad depot. Four pieces of railroad equipment now sit in the Railroad Heritage Park -- a caboose, bunk car, steam engine, and snowplow -- which is a combination of rolling stock that could have operated realistically at some point. The snowplow, as well as the depot itself, are listed on the National Register of Historic Places.
 
 {/* 
 Sticker template: 
