--- a/src/app/content/sewy/experimental.mdx
+++ b/src/app/content/sewy/experimental.mdx
@@ -14,7 +14,7 @@ photoPrompt:
 blurb: Read on to learn how the Civilian Conservation Corps helped shape Wyoming’s landscapes and overcome a variety of challenges!
 stickers: [{image: "/loc/sewy/experimental/ccc.jpg", linkOut: "https://www.loc.gov/item/92513367/", title: "Poster promoting the U.S. Civilian Conservation Corps"}, {image: "/loc/sewy/experimental/tree.png", linkOut: "https://www.loc.gov/resource/cph.3b48810/", title: "Poster promoting conservation of trees as a natural resource."}, {image: "/loc/sewy/experimental/jackson.png", linkOut: "https://www.loc.gov/resource/gdcmassbookdig.storyofaccomplis00unse/?sp=31&q=jackson+lake+civilian+conservation+corps&r=-0.197,0.551,1.415,0.983,0", title: "CCC wrokers on Jackson Lake"}]
 ---
-Cheyenne, a budding new town in the 1870s, was a “treeless prairie town surrounded by large ranches”. Very few trees grow natively to the high prairie -- one of them being the heart-leafed cottonwood. However, encouraging growth of trees benefits the entire ecosystem. The coverage protects animals from cutting winds, and with roots in the ground, water would soak into the ground instead of flooding over and destroying the landscape.
+Cheyenne, a budding new town in the 1870s, was a “treeless prairie town surrounded by large ranches”. Very few trees grow natively to the high prairie -- one of them being the heart-leafed cottonwood. However, encouraging growth of trees benefits the entire ecosystem. The coverage protects animals from cutting winds, and with roots in the ground, water soaks into the ground instead of flooding over and destroying the landscape.
 
 To find what other plants could survive the harsh climate, the US Department of Agriculture (USDA) established the Cheyenne Horticultural Field Station. They explored all different kinds of plants, including trees, shrubs, fruits, vegetables, and of course, flowers. The USDA gathered samples from around the world that might have similar conditions, like northern China and Russia.
 
@@ -50,9 +50,9 @@ The CCC was also involved in many other projects across Wyoming:
 
 The buildings were designed by William Dubois, a successful Wyoming architect who has fourteen buildings on the National Register of Historic Places.
 
-And one of their miscellaneous projects was building the new “Central Great Plains Field Station” located just outside of Cheyenne. Once built, the Field Station tackled the problem of finding hardy variety of a strawberry plant. After gathering 42,000 plants ranging from New Mexico to Montana, three new strawberry varieties were released: the Radiance, Ogallala, and Fort Laramie.
+And one of their miscellaneous projects was building the new “Central Great Plains Field Station” located just outside of Cheyenne. Once built, the Field Station tackled the problem of finding hardy varieties of strawberry plants. After gathering 42,000 plants ranging from New Mexico to Montana, three new strawberry varieties were released: the Radiance, Ogallala, and Fort Laramie.
 
-In 1974, the focus of the Field Station shifted to focus on grasslands and things like what grazing patterns are best, a very applicable study for the area. And now, the trees and shrubs that managed to survive under minimal care are the strongest of the bunch - they thrived independently in Cheyenne’s harsh climate.
+In 1974, the focus of the Field Station shifted to grasslands and things like what grazing patterns are best, a very applicable study for the area. And now, the trees and shrubs that managed to survive under minimal care are the strongest of the bunch - they thrived independently in Cheyenne’s harsh climate.
 
 {/* 
 Sticker template: 
