--- a/src/app/content/sewy/knight.mdx
+++ b/src/app/content/sewy/knight.mdx
@@ -59,7 +59,7 @@ He established the Wyoming Science Camp in 1925, a place where students could le
 
 Eventually, the camp grew from tents to cabins, which Knight designed and built with the help of five students. To transport things to the camp, they got eleven Franklin cars, which they painted bright yellow with a dinosaur logo. Lecturers and students would come across the country to learn at the camp.
 
-<LOCItem image="/loc/sewy/knight/lodge.jpg" type="pnp" linkOut="https://www.loc.gov/resource/hhh.wy0048.photos/?sp=5" caption="South-view of Main Lodge" alt="A black and white photograph of a large log cabin set against a forest of trees. There are wooden stairs leading up into the cabin and shutters on the cabin windows."/>
+<LOCItem image="/loc/sewy/knight/lodge.jpg" type="pnp" linkOut="https://www.loc.gov/resource/hhh.wy0048.photos/?sp=5" caption="South-view of the Main Lodge" alt="A black and white photograph of a large log cabin set against a forest of trees. There are wooden stairs leading up into the cabin and shutters on the cabin windows."/>
 <LOCItem image="/loc/sewy/knight/class.jpg" type="pnp" linkOut="https://www.loc.gov/resource/hhh.wy0048.photos/?sp=8" caption="Interior of the Main Lodge" alt="A black and white photograph of the inside of a large wooden log cabin. There is a large tree in the middle of the cabin that comes up from the floor and through the roof. There are wooden chairs and tables in the cabin and a metal chimney."/>
 <LOCItem
   type="pnp"
