--- a/src/app/content/sewy/lionsPark.mdx
+++ b/src/app/content/sewy/lionsPark.mdx
@@ -62,7 +62,7 @@ Arbor Day was nearly repealed in 1920, and James, upset at the thought that the 
     {type: "text", src:"Okay!", position:{col:2, row:6}, size:{width:1, height:1}, style:{outline:"bubble"}},
 ]}/>
 
-Sloan’s Lake grove was overgrown, with clover over 5 feet tall. But James painted a picture for the Lion’s Club, who was tasked with beautifying the area. He said “Gentlemen, if these grounds were cleaned up, this is the ideal spot for picnics and pleasure.” This motivated one of the members so much he shouted out with pride, “LIONS PARK!”, and that’s how it got its name.
+Sloan’s Lake grove was overgrown with clover over 5 feet tall. But James painted a picture for the Lion’s Club, who was tasked with beautifying the area. He said “Gentlemen, if these grounds were cleaned up, this is the ideal spot for picnics and pleasure.” This motivated one of the members so much he shouted out with pride, “LIONS PARK!”, and that’s how it got its name.
 
 {/* 
 Sticker template: 
