--- a/src/app/content/sewy/lovejoy.mdx
+++ b/src/app/content/sewy/lovejoy.mdx
@@ -50,7 +50,7 @@ He opened Lovejoy Novelty Works, where he would sell things like phonographs and
     {type:"image", src:"/loc/sewy/lovejoy/hollow2.png", position:{col:6, row:27}, size:{width:4, height:4}},
 ]}/>
 
-Even when car manufacturing eventually became a mass-produced industry,  as they are today, Lovejoy was still passionate about them. He worked with the National Highway Association on a road map, adding Laramie and other sights to see in Wyoming to it.
+Even when cars were ultimately mass-produced,  as they are today, Lovejoy was still passionate about them. He worked with the National Highway Association on a road map, adding Laramie and other sights to see in Wyoming to it.
 
 
 <LOCItem image="/loc/sewy/lovejoy/map.jpg" type="book"caption="A map in the Wyoming Auto Guide showing the best routes" linkOut="https://www.loc.gov/resource/gdcmassbookdig.wyomingautoguide00unse/?sp=20&r=-0.207,0.206,1.744,1.223,0" alt="A hand drawn map made by Lovejoy showing various landmarks in Laramie including Lovejoy’s garage. "/>
@@ -59,7 +59,7 @@ Even when car manufacturing eventually became a mass-produced industry,  as they
 
 Lovejoy eventually became a dealer of Franklin Motor Cars and sold them out of his shop.  Due to low sale numbers, the motor company thought he was doing a terrible job. When the company sent a Franklin manager to help him improve his marketing techniques, Lovejoy took them around on a tour of the area. Pointing out the ranches where he had sold a car in between the large stretches without a human in sight, and the Franklin manager left impressed that Lovejoy had sold as many vehicles as he did.
 
-In addition to running a car dealership, Lovejoy was still keen on tinkering. Finally in 1912, Lovejoy filed a patent for one of his inventions -- for an automatic garage door opener.
+In addition to running a car dealership, Lovejoy was still keen on tinkering. Finally in 1912, Lovejoy filed a patent for one of his inventions -- an automatic garage door opener.
 
 His design was clever: it used electricity to open the door, and counterweights to close it, thus saving on electric costs.
 
