--- a/src/app/content/chicago/garfieldPark.mdx
+++ b/src/app/content/chicago/garfieldPark.mdx
@@ -59,7 +59,7 @@ Most importantly in the conservatory are the plants. Jensen’s plan for the lan
 
 Throughout its life, the Garfield Park Conservatory has adapted to serve the surrounding community's interests and into a busy city green space. In addition to being a space for plants and plant lovers, the Conservatory hosts plant shows and art exhibitions and offers many community events. 
 
-<LOCItem type="pnp" image="/loc/chicago/garfieldPark/mum.jpg" linkOut="https://www.loc.gov/item/98518256/"/>
+<LOCItem type="pnp" image="/loc/chicago/garfieldPark/mum.jpg" caption="Poster for the conservatory's Mum show" linkOut="https://www.loc.gov/item/98518256/" alt="Yellow poster featuring a large orange mum. The poster is an advertisement for the conservatory's mum show."/>
 
 {/* 
 Sticker template: 
