--- a/src/app/content/chicago/muddyWaters.mdx
+++ b/src/app/content/chicago/muddyWaters.mdx
@@ -26,7 +26,7 @@ Muddy Waters grew up in the Mississippi Delta and started playing the guitar at 
     {type:"image", src:"/loc/chicago/muddyWaters/r2.jpg", alt:"A color comic panel of a young Muddy Waters wearing headphones and looking surprised.", position:{col:3, row:11}, size:{width:6, height:8}},
 ]}/>
 <LOCItem type="manuscript" image="/loc/chicago/muddyWaters/lomax.jpg" caption="Notes from Alan Lomax when meeting with Muddy Waters. He notes that Muddy Waters can tune his guitar in three ways - Natural, Spanish, and E minor, his favorite song is 'I Be's Troubled', and he owns a Victrola." linkOut="https://www.loc.gov/resource/afc2004004.ms070208/?sp=18" alt="A photograph of Alan Lomax's open notebook. The lined page is scribbled with notes written in pen ink. "/>
-<LOCItem type="pnp" image="/loc/chicago/muddyWaters/c.jpg" caption="Card catalog image, of I Be's Troubled, Muddy Waters' favorite song." linkOut="https://www.loc.gov/item/afc9999005.34566/" alt="A black and white scan of the I Be's Troubled catalog card. The card is scribbled with various notes."/>
+<LOCItem type="pnp" image="/loc/chicago/muddyWaters/c.jpg" caption="Card catalog image of I Be's Troubled, Muddy Waters' favorite song." linkOut="https://www.loc.gov/item/afc9999005.34566/" alt="A black and white scan of the I Be's Troubled catalog card. The card is scribbled with various notes."/>
 
 When the record was pressed, Muddy Waters received a couple of copies and $20 in the mail. He immediately played the record on his machine, and soon after, in 1943, he left for Memphis and then Chicago to pursue a full-time music career.
 
