--- a/src/app/content/chicago/hullHouse.mdx
+++ b/src/app/content/chicago/hullHouse.mdx
@@ -23,7 +23,7 @@ Hull House was a settlement house founded by Jane Addams and Ellen Gates Starr i
 
 Over time, the scale of Hull House grew. Jane Addams believed that theater was important for community, and founded a theater group that would perform in the community’s local language. They also expanded to offer more services to help people affected by poverty, such as daycare, food, and public baths. And over time, seeing that things needed to change at a legislative level, members of Hull House started to advocate for labor rights, immigrant rights, child labor laws, and occupational safety.
 
-From an individual perspective, many people who were involved with Hull House took the skills that they gained there into larger careers. One example is, Sadie Ellis Garland Dreikurs, the matriarch of art therapy, who had her beginnings in Hull House’s art classes.  Influenced by Hull House’s social work, Sadie developed her techniques to use art as a self-expression tool for therapy.
+From an individual perspective, many people who were involved with Hull House took the skills that they gained there into larger careers. One example is Sadie Ellis Garland Dreikurs, the matriarch of art therapy, who had her beginnings in Hull House’s art classes.  Influenced by Hull House’s social work, Sadie developed her techniques to use art as a self-expression tool for therapy.
 
 Another long-term Hull House  resident was Hilda Satt Polacheck. Arriving in Chicago  at 10 years old after immigrating from Poland, Hilda lived in Chicago’s Jewish immigrant neighborhood in Near West Side. She didn’t start getting involved with Hull House until she was 18, where she took on a position to demonstrate cloth making at the Hull-House Labor Museum. With some encouragement from Jane Addams, Hilda started to explore writing through Hull House’s English composition class. From there, her writing took off -- she wrote articles and plays that were performed through the Chicago Hebrew Institute, and was sponsored to attend the University of Chicago for a quarter.
 
