--- a/src/app/content/chicago/onLeong.mdx
+++ b/src/app/content/chicago/onLeong.mdx
@@ -47,7 +47,7 @@ Michaelsen and Rognstad researched Chinese architecture and design through books
 
 <LOCItem type="pnp" caption="The Gold Dome Building in Garfield Park, another building by the Michaelsen and Rognstad firm. After the successful reception of the On Leong design, the firm was hired to do lots of other work in Chinatown, including the building across the street, the Won Kow. This photograph is from the Carol M. Highsmith Archive" image="/loc/chicago/onLeong/goldDome.jpg" linkOut="https://www.loc.gov/resource/highsm.18035/?r=-0.431,0,1.862,1.294,0"/>
 
-The On Leong Building was a huge success -- in its heyday, it served as a major community space, with after-school programs for students, new immigrant support, and lots of activities and celebrations. The idea was for it to be like a “gas station” -- one stop shop for everything people need on their trip to living in Chicago.
+The On Leong Building was a huge success -- in its heyday, it served as a major community space, with after-school programs for students, new immigrant support, and lots of activities and celebrations. The idea was for it to be like a “gas station” -- a one stop shop for everything people need on their trip to living in Chicago.
 
 {/* 
 Sticker template: 
